--- a/Client/Areas/Admin/Views/Home/Applicants.cshtml
+++ b/Client/Areas/Admin/Views/Home/Applicants.cshtml
@@ -4,5 +4,114 @@
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Applicants</h1>
+<div class="page-inner">
+
+
+
+    <div class="row">
+        <div class="col-sm-6 col-md-3">
+            <div class="card card-stats card-round">
+                <div class="card-body ">
+                    <div class="row align-items-center">
+                        <div class="col-icon">
+                            <div style="background-color:green" class="icon-big text-center icon-primary bubble-shadow-small">
+                                <i class="fas fa-users"></i>
+                            </div>
+                        </div>
+
+                        <a asp-controller="Home" asp-action="Learners" asp-area="Admin" style="color:white">
+                            <div class="col col-stats ml-3 ml-sm-0">
+                                <div class="numbers">
+                                    <h4 class="card-title">Total Learners</h4>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm-6 col-md-3">
+            <div class="card card-stats card-round">
+                <div class="card-body">
+                    <div class="row align-items-center">
+                        <div class="col-icon">
+                            <div style="background-color:green" class="icon-big text-center icon-info bubble-shadow-small">
+                                <i class="far fa-newspaper"></i>
+                            </div>
+                        </div>
+                        <a asp-controller="Home" asp-action="Applicants" asp-area="Admin" style="color:white">
+                            <div class="col col-stats ml-3 ml-sm-0">
+                                <div class="numbers">
+                                    <h4 class="card-title">Applicants</h4>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+        <div class="col-sm-6 col-md-3">
+            <div class="card card-stats card-round">
+                <div class="card-body">
+                    <div class="row align-items-center">
+                        <div class="col-icon">
+                            <div style="background-color:green" class="icon-big text-center icon-secondary bubble-shadow-small">
+                                <i class="fas fa-award"></i>
+                            </div>
+                        </div>
+                        <a asp-controller="Home" asp-action="Statistics" asp-area="Admin" style="color:white">
+                            <div class="col col-stats ml-3 ml-sm-0">
+                                <div class="numbers">
+                                    <h4 class="card-title">Statistics</h4>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </div>
+
+
+</div>
+
+<div>
+
+    <table class="table table-striped table-bordered" cellspacing="0" width="100%">
+        <thead>
+            <tr style="background-color:green ">
+                <th class="th-sm" style="color:white">
+                    Reference Number
+                </th>
+                <th class="th-sm" style="color:white">
+                    Full Name
+                </th>
+                <th class="th-sm" style="color:white">
+                    Gender
+                </th>
+                <th class="th-sm" style="color:white">
+                    Email Address
+                </th>
+                <th class="th-sm" style="color:white">
+                    Applied Grade
+                </th>
+                <th class="th-sm" style="color:white">
+                    Enrolling Year
+                </th>
+                <th class="th-sm" style="color:white">
+                    Status
+                </th>
+                <th class="th-sm" style="color:white">
+                    View
+                </th>
+            </tr>
+        </thead>
+        <tbody id="apptable">
+        </tbody>
+    </table>
+</div>
+
 
