--- a/Client/Areas/Admin/Views/Home/Enquiries.cshtml
+++ b/Client/Areas/Admin/Views/Home/Enquiries.cshtml
@@ -4,5 +4,170 @@
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Enquiries</h1>
+<div class="page-navs bg-white">
+    <div class="nav-scroller">
+        <div class="nav nav-tabs nav-line nav-color-primary">
+            <a class="nav-link " data-toggle="tab" href="#tab1" style="color:black">
+                Enquiries Portal
+
+            </a>
+
+        </div>
+    </div>
+</div>
+
+<div class="page-inner">
+    <div class="row">
+        <div class="col-md-12">
+            <div class="d-flex justify-content-between">
+                <div class="d-md-inline-block">
+                    <div class="input-group">
+                        <div class="input-group-prepend">
+                            <span class="input-group-text bg-white">
+                                <i class="fa fa-search search-icon"></i>
+                            </span>
+                        </div>
+                        <input type="text" class="form-control" aria-label="Text input with dropdown button">
+
+                    </div>
+                </div>
+
+
+
+                <div class="modal fade addNewInputs" id="sendMail" tabindex="-1" role="dialog" aria-labelledby="modalAdd" aria-hidden="true">
+
+                    <div class="modal-dialog" role="document">
+                        <div class="modal-content">
+                            <div class="modal-header text-center">
+                                <h4 class="modal-title w-100 font-weight-bold text-primary ml-5">Enquiry Feedback</h4>
+                                <button type="button" class="close text-primary" data-dismiss="modal" aria-label="Close">
+                                    <span aria-hidden="true">&times;</span>
+                                </button>
+                            </div>
+
+                            <form id="contact-form" method="post" action="contact-2.php" role="form">
+                                <div class="messages"></div>
+
+
+                                <div class="form-group">
+                                    <label for="form_email">Email *</label>
+                                    <input id="form_email" type="email" name="email" class="form-control" placeholder="Recipient *" required="required" data-error="Valid email is required.">
+                                    <div class="help-block with-errors"></div>
+                                </div>
+
+
+                                <div class="form-group">
+                                    <label for="form_name">Full *</label>
+                                    <input id="form_name" type="text" name="name" class="form-control" placeholder="Subject *" required="required" data-error="Firstname is required.">
+                                    <div class="help-block with-errors"></div>
+                                </div>
+                                <div class="controls">
+
+
+
+
+
+
+
+                                    <div class="row">
+                                        <div class="col-md-12">
+                                            <div class="form-group">
+                                                <label for="form_message">Message *</label>
+                                                <textarea id="form_message" name="message" class="form-control" placeholder="Feedback *" rows="4" required="required" data-error="Please,leave us a message."></textarea>
+                                                <div class="help-block with-errors"></div>
+                                            </div>
+                                        </div>
+
+                                    </div>
+                                </div>
+
+                            </form>
+
+                            <!--<div class="modal-footer d-flex justify-content-center buttonAddFormWrapper">
+                              <button class="btn btn-outline-primary btn-block buttonAdd" data-dismiss="modal">fgfgfg
+                                <i class="fas fa-paper-plane-o ml-1"></i>
+                              </button>
+                            </div>-->
+
+
+                        </div>
+                    </div>
+                </div>
+
+
+
+
+                <button type="button" class="btn btn-success d-none d-sm-inline-block" data-target="#sendMail">
+                    <a href="" data-toggle="modal" data-target="#sendMail" style="color:white">Give Feedback<i></i></a>
+
+                </button>
+            </div>
+
+
+
+            <section class="card mt-4">
+
+                <div class="list-group list-group-messages list-group-flush">
+                    <div class="list-group-item unread">
+                        <div class="list-group-item-figure">
+
+                            <a href="" class="user-avatar">
+                                <div class="rating rating-sm mr-3">
+                                    <i class="fa fa-envelope" style="color:black"></i>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="list-group-item-body pl-3 pl-md-4">
+                            <div class="row">
+                                <div class="col-12 col-lg-10">
+                                    <h4 class="list-group-item-title">
+                                        <a href="conversations.html">Oscar Ndlovu</a>
+                                    </h4>
+                                    <p class="list-group-item-text text-truncate"> I applied but have'nt got any response yet </p>
+                                </div>
+                                <div class="col-12 col-lg-2 text-lg-right">
+                                    <p class="list-group-item-text"> 16 minutes ago </p>
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+
+                <div class="list-group list-group-messages list-group-flush">
+                    <div class="list-group-item unread">
+                        <div class="list-group-item-figure">
+
+                            <a href="" class="user-avatar">
+                                <div class="rating rating-sm mr-3">
+                                    <i class="fa fa-envelope" style="color:gray"></i>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="list-group-item-body pl-3 pl-md-4">
+                            <div class="row">
+                                <div class="col-12 col-lg-10">
+                                    <h4 class="list-group-item-title">
+                                        <a href="conversations.html">Jimmy Denis</a>
+                                    </h4>
+                                    <p class="list-group-item-text text-truncate"> How are you? </p>
+                                </div>
+                                <div class="col-12 col-lg-2 text-lg-right">
+                                    <p class="list-group-item-text"> 16 minutes ago </p>
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+
+
+
+
+            </section>
+
+
+        </div>
+    </div>
+</div>
 
