--- a/Client/Areas/Admin/Views/Home/Index.cshtml
+++ b/Client/Areas/Admin/Views/Home/Index.cshtml
@@ -3,160 +3,252 @@
     ViewData["Title"] = "Index";
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
 }
-<div class="page-inner">
 
-    <div class="row">
-        <div class="col-sm-6 col-md-3">
-            <div class="card card-stats card-round">
-                <div class="card-body ">
-                    <div class="row align-items-center">
-                        <div class="col-icon">
-                            <div style="background-color:green" class="icon-big text-center icon-primary bubble-shadow-small">
-                                <i class="fas fa-users"></i>
-                            </div>
-                        </div>
+    <div class="page-inner">
 
-                        <a asp-controller="Home" asp-action="Learners" asp-area="Admin" style="color:white">
-                            <div class="col col-stats ml-3 ml-sm-0">
-                                <div class="numbers">
-                                    <h4 class="card-title">Total Learners</h4>
+        <div class="row">
+            <div class="col-sm-6 col-md-3">
+                <div class="card card-stats card-round">
+                    <div class="card-body ">
+                        <div class="row align-items-center">
+                            <div class="col-icon">
+                                <div style="background-color:green" class="icon-big text-center icon-primary bubble-shadow-small">
+                                    <i class="fas fa-users"></i>
                                 </div>
                             </div>
-                        </a>
+
+                            <a asp-controller="Home" asp-action="Learners" asp-area="Admin" style="color:white">
+                                <div class="col col-stats ml-3 ml-sm-0">
+                                    <div class="numbers">
+                                        <h4 class="card-title">Total Learners</h4>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="col-sm-6 col-md-3">
-            <div class="card card-stats card-round">
-                <div class="card-body">
-                    <div class="row align-items-center">
-                        <div class="col-icon">
-                            <div style="background-color:green" class="icon-big text-center icon-info bubble-shadow-small">
-                                <i class="far fa-newspaper"></i>
-                            </div>
-                        </div>
-                        <a href="applicants.html" style="color:white">
-                            <div class="col col-stats ml-3 ml-sm-0">
-                                <div class="numbers">
-                                    <h4 class="card-title">Applicants</h4>
+            <div class="col-sm-6 col-md-3">
+                <div class="card card-stats card-round">
+                    <div class="card-body">
+                        <div class="row align-items-center">
+                            <div class="col-icon">
+                                <div style="background-color:green" class="icon-big text-center icon-info bubble-shadow-small">
+                                    <i class="far fa-newspaper"></i>
                                 </div>
                             </div>
-                        </a>
+                            <a asp-controller="Home" asp-action="Applicants" asp-area="Admin" style="color:white">
+                                <div class="col col-stats ml-3 ml-sm-0">
+                                    <div class="numbers">
+                                        <h4 class="card-title">Applicants</h4>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
 
-        <div class="col-sm-6 col-md-3">
-            <div class="card card-stats card-round">
 
-                <div class="card-body">
-
-                    <div class="row align-items-center">
-                        <div class="col-icon">
-                            <div style="background-color:green" class="icon-big text-center icon-secondary bubble-shadow-small">
-                                <i class="far fa-check-circle"></i>
-                            </div>
-                        </div>
-                        <a href="approved.html" style="color:white">
-                            <div class="col col-stats ml-3 ml-sm-0">
-                                <div class="numbers">
-                                    <h4 class="card-title">New Enrolls </h4>
+            <div class="col-sm-6 col-md-3">
+                <div class="card card-stats card-round">
+                    <div class="card-body">
+                        <div class="row align-items-center">
+                            <div class="col-icon">
+                                <div style="background-color:green" class="icon-big text-center icon-secondary bubble-shadow-small">
+                                    <i class="fas fa-award"></i>
                                 </div>
                             </div>
-                        </a>
-                        </a>
+                            <a asp-controller="Home" asp-action="Statistics" asp-area="Admin" style="color:white">
+                                <div class="col col-stats ml-3 ml-sm-0">
+                                    <div class="numbers">
+                                        <h4 class="card-title">Statistics</h4>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
                     </div>
                 </div>
             </div>
+
         </div>
 
-
-        <div class="col-sm-6 col-md-3">
-            <div class="card card-stats card-round">
-                <div class="card-body">
-                    <div class="row align-items-center">
-                        <div class="col-icon">
-                            <div style="background-color:green" class="icon-big text-center icon-secondary bubble-shadow-small">
-                                <i class="fas fa-award"></i>
+        <div class="row d-flex justify-content-center modalWrapper">
+            <div class="modal fade addNewInputs" id="Add" tabindex="-1" role="dialog" aria-labelledby="Add" aria-hidden="true"
+                 >
+                <div class="modal-dialog" role="document">
+                   
+                        <div class="modal-content">
+                            <div class="modal-header text-center">
+                                <h4 class="modal-title w-100 font-weight-bold text-primary ml-5">Add New Member</h4>
+                                <button type="button" class="close text-primary" data-dismiss="modal" aria-label="Close">
+                                    <span aria-hidden="true">&times;</span>
+                                </button>
                             </div>
-                        </div>
-                        <a href="modules.html" style="color:white">
-                            <div class="col col-stats ml-3 ml-sm-0">
-                                <div class="numbers">
-                                    <h4 class="card-title">Total Modules</h4>
+                            <div class="form-group">
+                                <div class="input-group">
+                                    <div class="input-group-prepend">
+                                        <span class="input-group-text" id="">Full Name</span>
+                                    </div>
+                                    <input type="text" class="form-control" id="addstaffname" placeholder="Full Name" required>
+
+                                    <div class="invalid-feedback">
+                                        Please provide your fullname
+                                    </div>
                                 </div>
                             </div>
-                        </a>
-                    </div>
+
+                            <div class="form-group">
+                                <label for="exampleInputPassword1">ID Number</label>
+                                <input type="number" class="form-control" id="addstaffidNumber" placeholder="ID Number" required>
+                                <div class="invalid-feedback">
+                                    Please enter ID number
+                                </div>
+                            </div>
+
+
+                            <div class="form-row">
+                                <div class="col-md-6 mb-3">
+                                    <div class="form-group">
+                                        <label for="formGroupExampleInput">Title</label>
+                                        <select class="form-control" id="addstafftitle" required>
+                                            <option value="">Select</option>
+                                        </select>
+                                        <div class="invalid-feedback">
+                                            Select Title
+                                        </div>
+                                    </div>
+
+                                </div>
+
+                                <div class="col-md-6 mb-3">
+                                    <div class="form-group">
+                                        <label for="formGroupExampleInput">Position</label>
+                                        <select class="form-control" id="addstaffposition" required>
+                                            <option value="">Select</option>
+                                        </select>
+                                        <div class="invalid-feedback">
+                                            Specify Position
+                                        </div>
+                                    </div>
+                                </div>
+
+                            </div>
+
+                            <div class="form-group">
+                                <label for="exampleInputPassword1">Cell Number</label>
+                                <input type="number" class="form-control" id="addstaffCellNumber" placeholder="Phone Number" required>
+                                <div class="invalid-feedback">
+                                    Please enter phone number
+                                </div>
+                            </div>
+
+                            <div class="form-group">
+                                <label for="exampleInputEmail1">Email address</label>
+                                <input type="email" class="form-control" id="addstaffemail" aria-describedby="emailHelp" placeholder="Enter email" required>
+                                <div class="invalid-feedback">
+                                    Please enter valid email address
+                                </div>
+                            </div>
+
+                            <div class="form-group">
+
+                                <div class="form-group">
+                                    <label for="exampleFormControlFile1">Profile Pic</label>
+                                    <input type="file" class="form-control-file" id="addstaffpic" required>
+                                    <div class="invalid-feedback">
+                                        Upload Profile Pc
+                                    </div>
+                                </div>
+
+                            </div>
+
+                            <div class="modal-footer d-flex justify-content-center buttonAddFormWrapper">
+                                <button class="btn btn-outline-primary btn-block buttonAdd" style="background-color:limegreen" onclick="addStuff()" id="addstaff">
+                                    Add Teacher
+                                    <i class="fas fa-paper-plane-o ml-1"></i>
+                                </button>
+                            </div>
+                        </div>
+                    
                 </div>
+            </div>
+
+            <div class="modal fade addNewInputs" id="Delete" tabindex="-1" role="dialog" aria-labelledby="Delete" aria-hidden="true">
+                <div class="modal-dialog" role="document">
+                   
+                        <div class="modal-content">
+
+
+                            <div class="modal-header text-center">
+                                <h4 class="modal-title w-100 font-weight-bold text-primary ml-5">Remove Member</h4>
+                                <button type="button" class="close text-primary" data-dismiss="modal" aria-label="Close">
+                                    <span aria-hidden="true">&times;</span>
+                                </button>
+                            </div>
+
+
+                            <div class="modal-body mx-3">
+                                <div class="md-form mb-5">
+                                    <input type="text" id="inputName" class="form-control validate">
+                                    <label data-error="wrong" data-success="right" for="inputName">Please Enter The Stuff Number</label>
+                                </div>
+                            </div>
+
+
+                            <div class="modal-footer d-flex justify-content-center buttonAddFormWrapper">
+                                <button class="btn btn-outline-primary btn-block buttonAdd" data-dismiss="modal" style="background-color:red">
+                                    Delete
+                                    <i class="fas fa-paper-plane-o ml-1"></i>
+                                </button>
+                            </div>
+                        </div>
+                    
+                </div>
+            </div>
+
+            <div class="text-center">
+                <a href="" class="btn btn-info btn-rounded btn-sm" data-toggle="modal" data-target="#Add">Add Stuff</a><br>
+            </div>
+
+            <div class="text-center" style="padding-left:50px">
+                <a href="" class="btn btn-danger btn-sm btn-rounded buttonDelete" data-toggle="modal" data-target="#Delete">Delete Stuff</a><br>
             </div>
         </div>
 
     </div>
 
-
-</div>
-
-
 <div>
 
-    <center><h3>Stuff Members (Teachers)</h3></center><br>
-    <table class="table table-striped table-bordered" cellspacing="0" width="100%">
-        <thead>
-            <tr style="background-color:green ">
-                <th class="th-sm" style="color:white">
-                    Name
-                </th>
-                <th class="th-sm" style="color:white">
-                    Position
-                </th>
-                <th class="th-sm" style="color:white">
-                    Staff Number
-                </th>
-                <th class="th-sm" style="color:white">
-                    Email Address
-                </th>
-                <th class="th-sm" style="color:white">
-                    Phone Number
-                </th>
-                <th class="th-sm" style="color:white">
-                    Details
-                </th>
-            </tr>
-        </thead>
-        <tbody id="bindemp">
-        </tbody>
-    </table>
-</div>
+        <table class="table table-striped table-bordered" cellspacing="0" width="100%">
+            <thead>
+                <tr style="background-color:green ">
+                    <th class="th-sm" style="color:white">
+                        Stuff Number
+                    </th>
+                    <th class="th-sm" style="color:white">
+                        Title
+                    </th>
+                    <th class="th-sm" style="color:white">
+                        Full Name
+                    </th>
+                    <th class="th-sm" style="color:white">
+                        Email Address
+                    </th>
+                    <th class="th-sm" style="color:white">
+                        Phone Number
+                    </th>
+                    <th class="th-sm" style="color:white">
+                        Position
+                    </th>
+                    <th class="th-sm" style="color:white">
+                        Details
+                    </th>
+                </tr>
+            </thead>
+            <tbody id="bindemp">
+            </tbody>
+        </table>
+    </div>
 
-
-
-<script>
-
-        $(document).ready(function () {
-             //Load the droplists dynamically
-             //Genders
-            var url = "https://localhost:44382/api/employees";
-            $.getJSON(url, function (data) {
-                $('#bindemp').empty();
-                $.each(data, function (key, val) {
-                    var row = "<tr><td>" + val.Name + "</td> <td>" + val.StuffNo + "</td> <td>" + val.Position + "</td> <td>" + val.Email + "</td> <td>" + val.Email + "</td> <td>" + "</td></tr>";
-                    $(row).append($('#bindemp'))
-
-                });
-            });
-
-
-
-
-
-
-
-        });
-
-
-
-
-</script>
+  
